--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,7 @@ LDFLAGS = $(CFLAGS)
 LDLIBS = -Wall $(shell pkg-config --libs check)
 
 all: check_fifo
-check_fifo: check_mfifo.o ../src/mfile.o
+check_fifo: check_mfifo.c check_mfifo.o ../src/mfile.o
 
 test: check_fifo
 	./$< 
